detaiils - first should be open onload

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img src="./assets/images/icon-star.svg" alt="" />
                 <h2 class="heading">FAQs</h2>
             </div>
-            <details class="styled">
+            <details class="styled" open>
                 <summary class="title">
                     What is Frontend Mentor, and how will it help me?
                 </summary>
