--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
                 <img src="./assets/images/icon-star.svg" alt="" />
                 <h2 class="heading">FAQs</h2>
             </div>
-            <details class="styled" open>
+
+            <!--Question and Answer 1-->
+            <details class="details styled" open>
                 <summary class="title">
                     What is Frontend Mentor, and how will it help me?
                 </summary>
@@ -32,7 +34,9 @@
                     levels and ideal for portfolio building.
                 </p>
             </details>
-            <details>
+
+             <!--Question and Answer 2-->
+            <details class="details">
                 <summary class="title">Is Frontend Mentor free?</summary>
                 <p class="text">
                     Yes, Frontend Mentor offers both free and premium coding
@@ -40,7 +44,9 @@
                     of projects suitable for all skill levels.
                 </p>
             </details>
-            <details>
+
+             <!--Question and Answer 3-->
+            <details class="details">
                 <summary class="title">
                     Can I use Frontend Mentor projects in my portfolio?
                 </summary>
@@ -50,10 +56,11 @@
                     skills to potential employers!
                 </p>
             </details>
-            <details>
+
+             <!--Question and Answer 4-->
+            <details class="details">
                 <summary class="title">
-                    How can I get help if I'm stuck on a Frontend Mentor
-                    challenge?
+                    How can I get help if I'm stuck on a challenge?
                 </summary>
                 <p class="text">
                     The best place to get help is inside Frontend Mentor's
