--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </p>
             </details>
 
-             <!--Question and Answer 2-->
+            <!--Question and Answer 2-->
             <details class="details">
                 <summary class="title">Is Frontend Mentor free?</summary>
                 <p class="text">
@@ -45,7 +45,7 @@
                 </p>
             </details>
 
-             <!--Question and Answer 3-->
+            <!--Question and Answer 3-->
             <details class="details">
                 <summary class="title">
                     Can I use Frontend Mentor projects in my portfolio?
@@ -57,7 +57,7 @@
                 </p>
             </details>
 
-             <!--Question and Answer 4-->
+            <!--Question and Answer 4-->
             <details class="details">
                 <summary class="title">
                     How can I get help if I'm stuck on a challenge?
@@ -70,7 +70,7 @@
             </details>
         </main>
 
-        <div class="attribution">
+        <footer class="attribution">
             Challenge by
             <a
                 href="https://www.frontendmentor.io?ref=challenge"
@@ -78,7 +78,7 @@
                 >Frontend Mentor</a
             >. Coded by
             <a href="https://github.com/ChamuMutezva">Chamu Mutezva</a>.
-        </div>
+        </footer>
         <script type="module">
             import mermaid from "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs";
             mermaid.initialize({ startOnLoad: true });
