--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <!--Question and Answer 1-->
-            <details class="details styled" open>
+            <details name="faqs" class="details styled" open>
                 <summary class="title">
                     What is Frontend Mentor, and how will it help me?
                 </summary>
@@ -36,7 +36,7 @@
             </details>
 
             <!--Question and Answer 2-->
-            <details class="details">
+            <details name="faqs" class="details">
                 <summary class="title">Is Frontend Mentor free?</summary>
                 <p class="text">
                     Yes, Frontend Mentor offers both free and premium coding
@@ -46,7 +46,7 @@
             </details>
 
             <!--Question and Answer 3-->
-            <details class="details">
+            <details name="faqs" class="details">
                 <summary class="title">
                     Can I use Frontend Mentor projects in my portfolio?
                 </summary>
@@ -58,7 +58,7 @@
             </details>
 
             <!--Question and Answer 4-->
-            <details class="details">
+            <details name="faqs" class="details">
                 <summary class="title">
                     How can I get help if I'm stuck on a challenge?
                 </summary>
